Cart Value Div Alignment Fixed

--- a/src/app/components/cart-controller/cart-controller.component.css
+++ b/src/app/components/cart-controller/cart-controller.component.css
@@ -17,3 +17,6 @@ p{
 .view{
     text-align: justify;
 }
+a{
+    text-decoration: none;
+}
